# customer-api

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Customer_API.postman_collection.json  HOW_TO_VIEW_SWAGGER.md  INSTALLATION.md  MANIFEST.in  MANUAL_TESTING.md  POSTMAN_GUIDE.md  PUSH_TO_GITHUB.md  QUICK_TEST.md  README.md  SALES_INVOICE_GUIDE.md  SWAGGER_SETUP.md  SWAGGER_TROUBLESHOOTING.md  SWAGGER_UPDATED.md  SWAGGER_UPDATED_V2.md  TESTING.md  TEST_RESULTS.md  USAGE_GUIDE.md  pyproject.toml  run_tests.py  setup.py  swagger-standalone.html
customer_api/: __init__.py  api.py  hooks.py  modules.txt  openapi.yaml  patches.txt
customer_api/config/: docs.py
customer_api/customer_api/doctype/woocommerce_item_mapping/: woocommerce_item_mapping.json  woocommerce_item_mapping.py
customer_api/customer_api/doctype/wordpress_site/: wordpress_site.json  wordpress_site.py
customer_api/customer_api/doctype/wordpress_webhook_log/: __init__.py  wordpress_webhook_log.json  wordpress_webhook_log.py
customer_api/public/: openapi.yaml  swagger-ui.html
customer_api/tests/: __init__.py  test_customer_api.py
customer_api/www/: api-docs.html
