[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "customer_api"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dynamic = ["version"]
description = "Custom API endpoints for ERPNext Customer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "frappe"
]

[tool.bench.dev-dependencies]

[project.urls]
Homepage = "https://github.com/yourusername/customer_api"

